prod/vultr/3-whoami-test/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-test
  namespace: whoami
spec:
  ports:
    - name: http
      port: 80
  selector:
    app.kubernetes.io/name: whoami
    namespace: whoami
